--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 
     <!-- Bootstrap JS -->
     <script type="module" src="/src/js/main.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
