--- a/index.html
+++ b/index.html
@@ -134,12 +134,14 @@
                         </div>
                         
                         <div class="mb-3">
-                            <label for="select" class="form-label">Select Option</label>
+                            <label for="select" class="form-label">Select</label>
                             <select class="form-select" id="select">
                                 <option selected>Choose...</option>
                                 <option value="1">One</option>
                                 <option value="2">Two</option>
                                 <option value="3">Three</option>
+                                <hr />
+                                <option value="add">Add new</option>
                             </select>
                         </div>
                         
