add radio button groups — I'm not sure about the syntax and invite the discussion.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                 <button type="button" class="btn btn-primary btn-sm me-2">Small</button>
             </div>
             <div class="mb-4">
+                <h5>Button Group</h5>
                 <div role="radiogroup" class="btn-group btn-group-lg bv-no-focus-ring" tabindex="-1">
                     <input id="option1a" text="1" class="btn-check" checked type="radio" name="radio1" value="option1">
                     <label for="option1a" class="btn btn-outline-primary">Option 1</label>
