add footer element add necessary css variable

--- a/index.html
+++ b/index.html
@@ -476,6 +476,66 @@
                     </tbody>
                 </table>
             </div>
+
+            <!-- Tables -->
+            <div class="mb-4">
+                <h5>Footer</h5>
+
+                <footer class="bg-light">
+                    <div class="row small">
+                        <div class="col py-3 px-5">
+                            <ul class="list-unstyled mb-0">
+                                <li class="text-muted">
+                                    Have comments or suggestions?
+                                </li>
+                                <li>
+                                    <a href="#"
+                                        class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Provide
+                                        feedback</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col py-3 px-5 text-end">
+                            <ul class="list-unstyled mb-0">
+                                <li class="text-muted">Need help?</li>
+                                <li>
+                                    <a href="#"
+                                        class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Get
+                                        support</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="bg-dark-subtle small">
+                        <div class="row small">
+                            <div class="col py-3 px-5">
+                                <ul class="list-inline mb-0">
+                                    <li class="list-inline-item text-muted">© Crunchafi. All rights reserved.</li>
+                                </ul>
+                            </div>
+                            <div class="col py-3 px-5 text-end">
+                                <ul class="list-inline mb-0">
+                                    <li class="list-inline-item">
+                                        <a href="#"
+                                            class="m-1 link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover">Cookie
+                                            policy</a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a href="#"
+                                            class="m-1 link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover">Privacy
+                                            policy</a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a href="#"
+                                            class="m-1 link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover">Terms
+                                            of service</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+            </div>
         </section>
     </div>
 
