footer link resources

--- a/index.html
+++ b/index.html
@@ -483,50 +483,57 @@
 
                 <footer class="bg-light">
                     <div class="row small">
-                        <div class="col py-3 px-5">
+                        <div class="col-sm-6 py-3 px-5">
                             <ul class="list-unstyled mb-0">
                                 <li class="text-muted">
                                     Have comments or suggestions?
                                 </li>
                                 <li>
+                                    <!-- Feedback to Aha -->
                                     <a href="#"
                                         class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Provide
                                         feedback</a>
                                 </li>
                             </ul>
                         </div>
-                        <div class="col py-3 px-5 text-end">
+                        <div class="col-sm-6 py-3 px-5 text-end">
                             <ul class="list-unstyled mb-0">
                                 <li class="text-muted">Need help?</li>
                                 <li>
-                                    <a href="#"
-                                        class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Get
-                                        support</a>
+                                    <a href="https://www.crunchafi.com/submit-a-support-ticket" target="_blank"
+                                        class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Contact
+                                        support</a> or
+                                    <a href="https://www.crunchafi.com/knowledge-base" target="_blank"
+                                        class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">visit
+                                        support center</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="bg-dark-subtle small">
                         <div class="row small">
-                            <div class="col py-3 px-5">
+                            <div class="col-sm-6 py-3 px-5">
                                 <ul class="list-inline mb-0">
-                                    <li class="list-inline-item text-muted">© Crunchafi. All rights reserved.</li>
+                                    <li class="list-inline-item text-muted">&copy;
+                                        <script>document.write(new Date().getFullYear())</script> Crunchafi. All rights
+                                        reserved.
+                                    </li>
                                 </ul>
                             </div>
-                            <div class="col py-3 px-5 text-end">
+                            <div class="col-sm-6 py-3 px-5 text-end">
                                 <ul class="list-inline mb-0">
                                     <li class="list-inline-item">
-                                        <a href="#"
+                                        <a href="https://www.crunchafi.com/cookie-policy" target="_blank"
                                             class="m-1 link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover">Cookie
                                             policy</a>
                                     </li>
                                     <li class="list-inline-item">
-                                        <a href="#"
+                                        <a href="https://www.crunchafi.com/privacy-policy" target="_blank"
                                             class="m-1 link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover">Privacy
                                             policy</a>
                                     </li>
                                     <li class="list-inline-item">
-                                        <a href="#"
+                                        <a href="https://www.crunchafi.com/terms-of-service" target="_blank"
                                             class="m-1 link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover">Terms
                                             of service</a>
                                     </li>
